--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.19.5",
     "react": "18.2.0",
     "react-native": "0.72.7",
     "react-native-vector-icons": "^10.0.2"
